--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "bin" : "./bin"
   },
   "keywords" : [
-    "scottyapp","backend","mobile","api"
+    "scottyapp","backend","mobile","api","cloud","cli","platform-as-a-service",
+        "deployment"
   ],
   "scripts": {
     "test": "node_modules/.bin/vows --spec spec/*-spec.coffee",
@@ -30,7 +31,14 @@
     "underscore" : "1.2.x",
     "async" : "0.1.x",
     "colors" : "~ 0.5",
-    "pkginfo" : "~ 0.2"    
+    "pkginfo" : "~ 0.2",
+    "cliff": "0.1.x",
+    "eyes": "0.1.x",
+    "nconf": "0.2.x",
+    "optimist": "0.2.x",
+    "prompt": "0.1.x >=0.1.7",
+    "request": "2.1.x",
+    "winston": "0.5.x"  
   },
   "devDependencies": {
     "should" : ">=0.2.1",    
